--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "formik": "^1.5.8",
+    "material-ui": "^0.20.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "react-tap-event-plugin": "^3.0.3",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
